style: :lipstick: component styles are updated and the dashbioard is updated
