# src/app/api/api_actualizar/models/jobs-error-dto.ts
@@ -1,0 +1,13 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface JobsErrorDto {
+  cjs_descripcion?: null | string;
+  cjs_estado?: null | string;
+  cjs_fecha_ejecucion?: null | string;
+  cjs_nombre_job?: null | string;
+  cjs_tiempo_ejecucion?: null | string;
+  envio_pos?: null | string;
+  ip_red?: null | string;
+  nombre?: null | string;
+  oficina?: null | string;
+}
