# src/app/api/api_actualizar/models/response-job-error.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+import { JobsErrorDto } from './jobs-error-dto';
+export interface ResponseJobError {
+  data?: null | Array<JobsErrorDto>;
+}
